# simplewgpugametest

./: .gitignore  Cargo.toml  README.md  build.rs  shader.frag.spv
data/scene/: scene.dbscene
export/: SimpleGameTest.exe - Shortcut.lnk
src/: main.rs
src/audio/: mod.rs
src/component/: mod.rs  movement_component.rs  player_movement_component.rs
src/entity/: entity.rs  entitymanager.rs  mod.rs  rendermesh.rs
src/input_manager/: input_manager.rs
src/physics/: mod.rs  physicscomponent.rs
src/renderer/: material.rs  mod.rs  model.rs  postprocessing.rs  renderer.rs  texture.rs  vertex.rs
src/renderer/camera/: camera.rs  cameracontroller.rs  mod.rs
src/renderer/entity/: entity.rs  mod.rs  rendermesh.rs
src/renderer/uniforms/: base_uniforms.rs  camera_uniform.rs  mod.rs
src/scene/: mod.rs
src/shaders/: EGA.glsl  base_frag.glsl  base_uniforms.glsl  base_vertex.glsl  bloom.frag  bloom.frag.spv  compiler.bat  dummy.frag  dummy.frag.spv  dummy.vert  dummy.vert.spv  film_grain.glsl  framebuffer.frag  framebuffer.frag.spv  framebuffer.vert  framebuffer.vert.spv  fxa.glsl  fxaa.frag  fxaa.frag.spv  image_tools.glsl  invert.frag  invert.frag.spv  light.glsl  pixelate.glsl  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shadow.frag  shadow.frag.spv  tonemapping.glsl  toon.glsl  water.frag  water.frag.spv
src/system/: mod.rs  movement_system.rs  physics_system.rs  player_movement_system.rs  systemmanager.rs
src/transform/: mod.rs  non_uniform.rs  rotation.rs  transform.rs  translation.rs
